--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
       <a id="nammy-logo" href="#"><img src="images/nntransparent.png" /></a>
       <ul id="header-nav" class="hidden">
         <li>
-          <a href="#">
+          <a href="https://np219.github.io/UX_UI_HW_19/">
             <span>Home</span>
             <span>Home</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#work-section">
             <span>Portfolio</span>
             <span>Portfolio</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="https://np219.github.io/UI_UX_HW_17/">
             <span>About Me</span>
             <span>About Me</span>
           </a>
