--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   </head>
   <body>
     <header class="navigation flex">
-      <a id="nammy-logo" href="#"><img src="images/nntransparent.png" /></a>
+      <a id="nammy-logo" href="https://np219.github.io/UX_UI_HW_19/"
+        ><img src="images/nntransparent.png"
+      /></a>
       <ul id="header-nav" class="hidden">
         <li>
           <a href="https://np219.github.io/UX_UI_HW_19/">
@@ -132,7 +134,9 @@
               for increased awareness of its mission
             </p>
             <div class="center">
-              <button>VIEW CASE STUDY</button>
+              <a href="https://np219.github.io/UX_UI_HW_20/"
+                ><button>VIEW CASE STUDY</button></a
+              >
             </div>
           </div>
         </div>
